  |              would make clients incompatible with previous clients or
  |              proxies will be a accompanied by 'client contest' change.
  `------------- Denotes a client rewrite.

Note: #xxxx refers to bug numbers as viewable on http://bugs.distributed.net/

==========================================================================
Version change log: $Id: CHANGES.txt,v 1.23 2008/08/17 16:50:02 stream Exp $
==========================================================================

2.9000
------
2.90**-***  new: all: Added OGR-NG cores

2.9016-506  new: x86: added new RC5-72 core (GO 2-pipe alt), selected for
                      P4 and Core Duo CPUs.
            fix: cellbe: Memory corruption on heavy background activity
                         when system is low on memory.
            fix: cellbe: Workaround for broken SPU scheduler (#4038).
            fix: all: Block lost if '-n 1' used on multi-cpu system (#4018).

2.9015-505  fix: cellbe: Memory corruption in OGR core (#4036)
            imp: x86: CPU Identification
            imp: macosx: Add support for Intel temperature sensors

2.9015-504  imp: cellbe: Tidy up cores for public source release
            fix: x86: broken -stress on intel macosx (#4021)

2.9015-503  imp: cellbe: Slightly faster SPE OGR core
            fix: linux: Working fix for the race condition alluded to in the
                        changelog for v2.9015-502
            imp: x86: Faster OGR MMX cores (1-3%, depending on CPU)
            chg: x86: OGR core selection for P4 (updated cores)

2.9015-502  new: cellbe: Added SPE OGR cores
            fix: linux: Fix race condition in heavily multithreaded
                        scenarios causing the first cruncher to randomly
                        stop running until client is restarted.
            chg: x86: SGP-3 is default RC5-72 core for older P4's (#4009)
            imp: x86: A little faster and stable speed of DG-3 and SGP-3 cores.
