@@ -23,12 +23,14 @@ Version bump guide:
 Note: #xxxx refers to bug numbers as viewable on http://bugs.distributed.net/
 
 ==========================================================================
-Version change log: $Id: CHANGES.txt,v 1.23 2008/08/17 16:50:02 stream Exp $
+Version change log: $Id: CHANGES.txt,v 1.24 2008/09/09 18:47:55 stream Exp $
 ==========================================================================
 
 2.9000
 ------
 2.90**-***  new: all: Added OGR-NG cores
+
+            chg: x86: RC5-72 core selection (#4072)
 
 2.9016-506  new: x86: added new RC5-72 core (GO 2-pipe alt), selected for
                       P4 and Core Duo CPUs.
